--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ body {
   justify-content: center;
 }
 
+.hidden {
+  display: none;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -52,13 +56,27 @@ body {
 }
 
 .button {
-  padding: 10px 25px;
-  background-color: purple;
+  background: linear-gradient(45deg, #00ff00, #800080);
   border: none;
+  border-radius: 15px;
   color: white;
-  align-self: center;
-  margin: 20px 0 10px;
+  padding: 15px 30px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  transition: transform 0.3s, box-shadow 0.3s;
   cursor: pointer;
+  margin: 10px;
+}
+
+.button:hover {
+  transform: scale(1.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.button:active {
+  transform: scale(1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .start {
@@ -134,4 +152,46 @@ body {
 
 .flipped {
   pointer-events: none;
+}
+
+.results {
+  background-color: #ffeedd; /* Jasny kolor tła */
+  border: 2px solid #ffcc99; /* Kolorowa ramka */
+  border-radius: 20px; /* Zaokrąglone rogi */
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 400px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Mocniejszy cień */
+  text-align: center;
+  font-family: "Comic Sans MS", "Comic Sans", cursive; /* Zabawna czcionka */
+  color: #333; /* Kolor tekstu */
+  animation: bounce 2s infinite; /* Animacja odbijania */
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+
+.results .title {
+  font-size: 28px; /* Większa czcionka dla tytułu */
+  margin-bottom: 15px;
+  color: #ff6347; /* Kolor tytułu */
+  text-shadow: 2px 2px #ffa07a; /* Cień dla tytułu */
+}
+
+.results .item {
+  font-size: 20px;
+  margin: 10px 0;
+  color: #4682b4; /* Kolor tekstu wyników */
+}
+
+.results .item span {
+  font-weight: bold; /* Wyróżnienie wartości wyników */
+  color: #ff4500; /* Kolor dla wartości wyników */
 }
